# DKNCloud-HASS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/workflows/: format.yml  lint.yml  package-test.yml  release.yml  tests.yml  validate.yml
custom_components/airzoneclouddaikin/: __init__.py  airzone_api.py  binary_sensor.py  climate.py  config_flow.py  const.py  diagnostics.py  helper.py  helpers.py  manifest.json  number.py  select.py  sensor.py  switch.py
custom_components/airzoneclouddaikin/translations/: de.json  en.json  es.json  fr.json  it.json  pt.json
tests/: conftest.py  test_airzone_api.py  test_climate.py  test_config_flow.py  test_diagnostics.py  test_helpers.py  test_notifications.py  test_number_payload_shapes.py  test_sensor.py  test_switch.py  test_translations.py
