# Tooling aligned to Home Assistant Python floor (>=3.13.2).

[project]
# Enforce the runtime floor required by HA 2025.5+.
requires-python = ">=3.13.2"

[tool.black]
line-length = 88
# Black supports py313; keep a single target since the project requires 3.13+.
target-version = ["py313"]
# Ensure a Black version that understands py313 (24.8.0+). CI installs 25.*.
required-version = "24.8.0"

[tool.ruff]
line-length = 88
# Match runtime: Python 3.13
target-version = "py313"
# Default fix behavior when running plain `ruff`.
fix = true

[tool.ruff.lint]
# Core rule sets: pycodestyle/pyflakes/isort/pyupgrade/bugbear
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E203", # Whitespace before ':' (conflicts with Black on slicing)
  "E501", # Line length (Black handles wrapping)
]

[tool.ruff.lint.isort]
# IMPORTANT: first-party must match this integration's package
known-first-party = ["custom_components.airzoneclouddaikin"]
combine-as-imports = true

# --- Optional hardening (uncomment if needed) ---
# [tool.ruff]
# force-exclude = true
# exclude = [".git", ".venv", "venv", ".mypy_cache", ".pytest_cache", "build", "dist"]

# If you re-export symbols in __init__.py and want to ignore F401 there:
# [tool.ruff.per-file-ignores]
# "custom_components/airzoneclouddaikin/__init__.py" = ["F401"]
